syntax = "proto3";

package analytics;

// Java-specific options
option java_multiple_files = true;
option java_package = "com.leaderboard.analytics.grpc";
option java_outer_classname = "AnalyticsProto";

service AnalyticsService {
    rpc TriggerMatchAnalysis (TriggerRequest) returns (TriggerResponse);
}

message TriggerRequest {
    int32 match_id = 1;
}

message TriggerResponse {
    string status = 1;
}